Tue Oct  7 14:50:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/Connection_Manager.cpp
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/distributer.cpp
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/distributer.h
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/receiver.cpp
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/receiver.h
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/sender.cpp
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/sender.h
        * orbsvcs/tests/AVStreams/Component_Switching/distributer.cpp
        * orbsvcs/tests/AVStreams/Component_Switching/distributer.h
        * orbsvcs/tests/AVStreams/Component_Switching/sender.h
          ACE_TCHAR fixes

Tue Oct  7 10:53:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/CodeSets/simple/client.cpp:
          Fixed compile error

Tue Oct  7 10:22:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.cpp:
          ACE_TCHAR fixes

        * tao/PI_Server.mpc:
          Removed borland as mpc template

Tue Oct  7 08:15:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/FtEventServiceInterceptor.cpp
        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/GroupInfoPublisher.cpp
        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/Identification_Service.cpp
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Acceptor.cpp
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Connector.cpp
        * orbsvcs/orbsvcs/IFRService/AliasDef_i.cpp
          ACE_TCHAR fixes

        * orbsvcs/orbsvcs/IFRService.mpc
        * MPC/config/ifrservice.mpb
          Disable IFRService with uses_wchar set, this service needs a lot of
          work to get compiling

Tue Oct  7 08:02:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/AMI_Primary_Replication_Strategy.cpp